@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.1
 
+  *) mod_proxy_fcgi: ProxyFCGISetEnvIf unsets variables when expression
+     evaluates to false.  PR64365. [Michael König <mail ikoenig.net>]
+
   *) mod_http2: Fixed regression that caused connections to close when mod_reqtimeout
      was configured with a handshake timeout. Fixes gitub issue #196.
      [Stefan Eissing]
